# hackatum-2019

./: .gitmodules  LICENSE  Makefile  README.md
src/xodr/: CMakeLists.txt  elevation.cpp  elevation.h  junction.cpp  junction.h  junction_parser.cpp  lane_attributes.cpp  lane_attributes.h  lane_id.h  lane_section.cpp  lane_section.h  lane_section_parser.cpp  poly3.cpp  poly3.h  reference_line.cpp  reference_line.h  reference_line_parser.cpp  road.cpp  road.h  road_link.cpp  road_link.h  road_link_parser.cpp  road_object.cpp  road_object.h  road_object_outline.cpp  road_object_outline.h  road_parser.cpp  units.cpp  units.h  xodr_map.cpp  xodr_map.h  xodr_map_keys.cpp  xodr_map_keys.h  xodr_object_reference.cpp  xodr_object_reference.h  xodr_reader.cpp  xodr_reader.h  xodr_utils.h  xodr_utils_impl.h
src/xodr/coordinate_conversion/: coordinate_conversion.cpp  coordinate_conversion.h
src/xodr/test/: test_config.h
src/xodr/test/coordinate_conversion/: test_coordinate_conversion.cpp
src/xodr/test/xml/: test_xml_attribute_parsers.cpp  test_xml_child_element_parsers.cpp  test_xml_reader.cpp
src/xodr/test/xodr/: test_junction.cpp  test_lane_attributes.cpp  (+13 more)
src/xodr/validation/: junction_validation.cpp  junction_validation.h  lane_link_validation.cpp  lane_link_validation.h  link_validation_base.h  road_link_validation.cpp  road_link_validation.h
src/xodr/xml/: xml_attribute_parsers.cpp  xml_attribute_parsers.h  xml_attribute_parsers_impl.h  xml_child_element_parsers.h  xml_child_element_parsers_impl.h  xml_parse_result.cpp  xml_parse_result.h  xml_reader.cpp  xml_reader.h
(+43 files in other folders)
